# zk-odst

./: .gitignore  Cargo.toml  README.md
benchmarking/: Cargo.toml
benchmarking/src/: lib.rs
blake2f-circuit/: Cargo.toml
blake2f-circuit/src/: README.md  blake2f.rs  cgpt_compression.rs  compression.rs  lib.rs  utils.rs  xor_chunks.rs
blake2f-circuit/src/compression/: bit_chunk.rs  compression_gate.rs
src/: blake2f.rs  compression.rs  fibonacci.rs  lib.rs  spread_table.rs  utils.rs
src/compression/: bit_chunk.rs  compression_gate.rs
